<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">PhotoShare</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="action_compartilhar">Compartilhar</string>
    <string name="imgAddUser">Adicionar usuario</string>
    <string name="HintTxtUser">Digite seu usuário</string>
    <string name="HintTxtEmail">Digite seu email</string>
    <string name="HintTxtPassword">Digite sua senha</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="lblLogin">Já tem conta? faça o login!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_feed_usuarios">FeedUsuariosActivity</string>
</resources>
